# graph-to-value

./: Book1.csv  README.md  graph_to_value.ipynb  pyproject.toml
