[tool.poetry]
name = "graph-to-value"
version = "0.1.0"
description = "OpenAIのモデルを使用してグラフから数値データを推測するプロジェクト"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
openai = "^1.75.0"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
pillow = "^11.2.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
